--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "artisanry/social-share": "^3.1",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
+        "jorenvanhocht/laravel-share": "^3.1",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
